--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,9 +59,14 @@ dependencies {
     implementation('androidx.annotation:annotation:1.3.0')
 
     // glide
-    implementation 'com.github.bumptech.glide:glide:4.13.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation "com.github.bumptech.glide:glide:$rootProject.glideVersion"
+    annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.glideVersion"
 
     //okhttp
-    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+    implementation("com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion")
+    implementation("com.squareup.okhttp3:logging-interceptor:$rootProject.okhttpVersion")
+
+    // retrofit, gson convertor
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofitVersion"
 }
