--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,9 @@ buildscript {
     ext {
         navigationVersion = '2.4.1'
         lifecycleVersion = '2.4.1'
+        okhttpVersion = '4.9.3'
+        retrofitVersion = '2.9.0'
+        glideVersion = '4.13.0'
     }
 
     repositories {
